fixed spacing from home page and nav bar (! there is a problem where sidebar expanding gets hidden behind the carousel

--- a/frontend/src/Components/Home/Home.css
+++ b/frontend/src/Components/Home/Home.css
@@ -1,7 +1,8 @@
 #main-container {
+    margin-top:-16%;
     display: flex;
     flex-direction: column;
-    width: 80vw !important;
+    width: 100vw !important;
     /* background-color: rgba(255, 105, 105, 0.761); */
 }
 
